--- a/CSS-lesson 2/page.html
+++ b/CSS-lesson 2/page.html
@@ -20,7 +20,7 @@
          </tr>
     </table>    
     <table cellspacing="0" cellpadding="0"  border="3" width="800" bordercolor="#6699FF" align="center">
-    <tr>
+    <tr class="center">
         <td>
             <h2>JG&K предлагает Вам:</h2>
              <ul>
